--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
+    "ant-design": "^1.0.0",
+    "antd": "^5.24.7",
     "axios": "^1.8.4",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
