--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -14,7 +14,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "ant-design": "^1.0.0",
     "antd": "^5.24.7",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
