--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "antd": "^5.24.7",
     "axios": "^1.9.0",
     "express": "^5.1.0",
+    "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "motion": "^12.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
